# flowy

./: .gitignore  CLAUDE.md  README.md  add-padding.py  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.js
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
ios/App/: Podfile
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
src/: App.jsx  CLAUDE.md  index.css  main.jsx
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: main.rs
src/components/gtd/: AIPromptCard.jsx  AISettings.jsx  ActionSheet.jsx  BlueDust.jsx  CLAUDE.md  CalendarCell.jsx  CalendarGrid.jsx  CalendarTaskChip.jsx  CalendarView.jsx  ConflictDialog.jsx  Constellation.jsx  DarkNebula.jsx  DeepSpaceDust.jsx  Drawer.jsx  FloatingTaskBubble.jsx  FocusCircle.jsx  FocusMode.jsx  FocusView.jsx  FolderPicker.jsx  JournalChip.jsx  JournalItem.jsx  JournalNowView.jsx  JournalPastView.jsx  MiniInfo.jsx  NoiseOverlay.jsx  NotesPanel.jsx  OrbitPaths.jsx  Planet.jsx  ProjectBoard.jsx  ProjectColumn.jsx  ProjectGallery.jsx  ProjectList.jsx  ProjectSettings.jsx  ProjectTaskCard.jsx  QuickCapture.jsx  Settings.jsx  Sidebar.jsx  SidebarGroup.jsx  SortableTask.jsx  (+10 more)
src/hooks/: CLAUDE.md  useFileSystem.js  useSync.js
src/lib/: CLAUDE.md  haptics.js  i18n.js  motion.js  platform.js  tauri.js
src/locales/: CLAUDE.md  en-US.json  zh-CN.json
src/stores/: CLAUDE.md  ai.js  calendar.js  editor.js  gtd.js  journal.js  project.js
(+47 files in other folders)
